[gd_scene load_steps=26 format=2]

[ext_resource path="res://Resources/mapa.png" type="Texture" id=1]
[ext_resource path="res://Juego.gd" type="Script" id=2]
[ext_resource path="res://Resources/reglas.png" type="Texture" id=3]
[ext_resource path="res://Resources/dado.png" type="Texture" id=4]
[ext_resource path="res://Resources/win.png" type="Texture" id=5]
[ext_resource path="res://Resources/guerrero.png" type="Texture" id=6]
[ext_resource path="res://Resources/mago.png" type="Texture" id=7]
[ext_resource path="res://Ubuntu-Medium.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://TransicionAnimacion.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=14]
size = 1000
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 1000
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 8, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 232, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 344, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 456, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 568, 8, 97, 98 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 112, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 224, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 336, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 448, 560, 109, 111 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 560, 560, 109, 111 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "rolling",
"speed": 15.0
} ]

[sub_resource type="DynamicFont" id=16]
size = 1000
font_data = ExtResource( 8 )

[node name="Juego" type="Node2D"]
position = Vector2( 132, 17 )
script = ExtResource( 2 )

[node name="TransicionAnimacion" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( -6500, -16624 )
scale = Vector2( 100, 100 )
z_index = 3

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -407.0
margin_top = -158.0
margin_right = 1469.0
margin_bottom = 1101.0

[node name="mapa" type="Sprite" parent="."]
position = Vector2( -326.661, -145 )
scale = Vector2( 0.418167, 0.452081 )
texture = ExtResource( 1 )
offset = Vector2( 2096.64, 1101.69 )

[node name="jugador1" type="Button" parent="."]
margin_left = -100.0
margin_top = 66.0
margin_right = 6977.0
margin_bottom = 3681.0
rect_scale = Vector2( 0.013, 0.013 )
custom_fonts/font = SubResource( 14 )
text = "JUGADOR 1"

[node name="jugador2" type="Button" parent="."]
margin_left = -98.0
margin_top = 564.0
margin_right = 6979.0
margin_bottom = 4179.0
rect_scale = Vector2( 0.013, 0.013 )
custom_fonts/font = SubResource( 15 )
text = "JUGADOR 2"

[node name="dado" type="AnimatedSprite" parent="."]
position = Vector2( -54, 332 )
scale = Vector2( 0.810134, 0.798125 )
frames = SubResource( 13 )
animation = "1"
playing = true

[node name="ficha1" type="Sprite" parent="."]
position = Vector2( -278, 614 )
scale = Vector2( 0.157076, 0.142958 )
texture = ExtResource( 6 )

[node name="ficha2" type="Sprite" parent="."]
position = Vector2( -302, 117 )
scale = Vector2( 0.15402, 0.14324 )
texture = ExtResource( 7 )

[node name="reglas" type="Sprite" parent="."]
position = Vector2( 507, 441 )
scale = Vector2( 0.664583, 0.60026 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="reglas"]

[node name="1" type="Node2D" parent="."]
position = Vector2( 49, 651 )

[node name="2" type="Node2D" parent="."]
position = Vector2( 154, 651 )

[node name="3" type="Node2D" parent="."]
position = Vector2( 253, 651 )

[node name="4" type="Node2D" parent="."]
position = Vector2( 358, 650 )

[node name="5" type="Node2D" parent="."]
position = Vector2( 452, 653 )

[node name="6" type="Node2D" parent="."]
position = Vector2( 547, 651 )

[node name="7" type="Node2D" parent="."]
position = Vector2( 650, 652 )

[node name="8" type="Node2D" parent="."]
position = Vector2( 747, 654 )

[node name="9" type="Node2D" parent="."]
position = Vector2( 846, 655 )

[node name="10" type="Node2D" parent="."]
position = Vector2( 943, 661 )

[node name="11" type="Node2D" parent="."]
position = Vector2( 1045, 652 )

[node name="12" type="Node2D" parent="."]
position = Vector2( 1046, 547 )

[node name="13" type="Node2D" parent="."]
position = Vector2( 1048, 439 )

[node name="14" type="Node2D" parent="."]
position = Vector2( 1047, 346 )

[node name="15" type="Node2D" parent="."]
position = Vector2( 1047, 241 )

[node name="16" type="Node2D" parent="."]
position = Vector2( 1048, 142 )

[node name="17" type="Node2D" parent="."]
position = Vector2( 1047, 43 )

[node name="18" type="Node2D" parent="."]
position = Vector2( 945, 44 )

[node name="19" type="Node2D" parent="."]
position = Vector2( 845, 44 )

[node name="20" type="Node2D" parent="."]
position = Vector2( 745, 44 )

[node name="21" type="Node2D" parent="."]
position = Vector2( 645, 44 )

[node name="22" type="Node2D" parent="."]
position = Vector2( 550, 47 )

[node name="23" type="Node2D" parent="."]
position = Vector2( 446, 45 )

[node name="24" type="Node2D" parent="."]
position = Vector2( 352, 45 )

[node name="25" type="Node2D" parent="."]
position = Vector2( 247, 46 )

[node name="26" type="Node2D" parent="."]
position = Vector2( 148, 45 )

[node name="27" type="Node2D" parent="."]
position = Vector2( 48, 40 )

[node name="28" type="Node2D" parent="."]
position = Vector2( 49, 160 )

[node name="29" type="Node2D" parent="."]
position = Vector2( 52, 277 )

[node name="30" type="Node2D" parent="."]
position = Vector2( 51, 406 )

[node name="31" type="Node2D" parent="."]
position = Vector2( 51, 512 )

[node name="32" type="Node2D" parent="."]
position = Vector2( 161, 517 )

[node name="33" type="Node2D" parent="."]
position = Vector2( 266, 515 )

[node name="34" type="Node2D" parent="."]
position = Vector2( 378, 517 )

[node name="35" type="Node2D" parent="."]
position = Vector2( 485, 516 )

[node name="36" type="Node2D" parent="."]
position = Vector2( 589, 514 )

[node name="37" type="Node2D" parent="."]
position = Vector2( 698, 514 )

[node name="38" type="Node2D" parent="."]
position = Vector2( 802, 516 )

[node name="39" type="Node2D" parent="."]
position = Vector2( 907, 515 )

[node name="40" type="Node2D" parent="."]
position = Vector2( 906, 400 )

[node name="41" type="Node2D" parent="."]
position = Vector2( 907, 293 )

[node name="42" type="Node2D" parent="."]
position = Vector2( 908, 175 )

[node name="43" type="Node2D" parent="."]
position = Vector2( 799, 181 )

[node name="44" type="Node2D" parent="."]
position = Vector2( 696, 177 )

[node name="45" type="Node2D" parent="."]
position = Vector2( 594, 177 )

[node name="46" type="Node2D" parent="."]
position = Vector2( 492, 177 )

[node name="47" type="Node2D" parent="."]
position = Vector2( 396, 180 )

[node name="48" type="Node2D" parent="."]
position = Vector2( 293, 177 )

[node name="49" type="Node2D" parent="."]
position = Vector2( 188, 176 )

[node name="50" type="Node2D" parent="."]
position = Vector2( 191, 280 )

[node name="51" type="Node2D" parent="."]
position = Vector2( 193, 404 )

[node name="52" type="Node2D" parent="."]
position = Vector2( 303, 392 )

[node name="53" type="Node2D" parent="."]
position = Vector2( 417, 396 )

[node name="54" type="Node2D" parent="."]
position = Vector2( 526, 394 )

[node name="55" type="Node2D" parent="."]
position = Vector2( 629, 394 )

[node name="56" type="Node2D" parent="."]
position = Vector2( 747, 394 )

[node name="57" type="Node2D" parent="."]
position = Vector2( 559, 296 )

[node name="monedas2" type="Label" parent="."]
margin_left = -68.0
margin_top = 123.0
margin_right = 500.0
margin_bottom = 1244.0
rect_scale = Vector2( 0.052, 0.038 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "0"

[node name="monedas1" type="Label" parent="."]
margin_left = -70.0
margin_top = 508.0
margin_right = 498.0
margin_bottom = 1629.0
rect_scale = Vector2( 0.052, 0.038 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "0"

[node name="win" type="Sprite" parent="."]
visible = false
position = Vector2( 416, 288 )
scale = Vector2( 1.15625, 1.09375 )
texture = ExtResource( 5 )

[connection signal="pressed" from="jugador1" to="." method="_on_jugador1_pressed"]
[connection signal="pressed" from="jugador2" to="." method="_on_jugador2_pressed"]
